compiler/testData/diagnostics/tests/secondaryConstructors/noPrimaryConstructor.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
// DIAGNOSTICS: -UNUSED_PARAMETER
class A {
    constructor(x: Int)
}

val x = A<!NO_VALUE_FOR_PARAMETER!>()<!>
